--- a/index.html
+++ b/index.html
@@ -47,71 +47,71 @@
      <div id="hour-9" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
         <textarea id="textArea-9" class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i id="btn-hour-9" class="fas fa-save" aria-hidden="true"></i>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="btn-hour-9">
+          <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
      <div id="hour-10" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
         <textarea  id="textArea-10" class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i id="btn-hour-10" class="fas fa-save" aria-hidden="true"></i>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="btn-hour-10">
+          <i  class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
       <div id="hour-11" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i id="btn-hour-11" class="fas fa-save" aria-hidden="true"></i>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="btn-hour-11">
+          <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
       <div id="hour-12" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">12AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i id="btn-hour-12" class="fas fa-save" aria-hidden="true"></i>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="btn-hour-12">
+          <i  class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
       <div id="hour-13" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i  id="btn-hour-13" class="fas fa-save" aria-hidden="true"></i>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="btn-hour-13">
+          <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
       <div id="hour-14" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button  class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i  id="btn-hour-14" class="fas fa-save" aria-hidden="true"></i>
+        <button  class="btn saveBtn col-2 col-md-1" aria-label="save" id="btn-hour-14">
+          <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
       <div id="hour-15" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i id="btn-hour-15"  class="fas fa-save" aria-hidden="true"></i>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="btn-hour-15">
+          <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
       <div id="hour-16" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i id="btn-hour-16"  class="fas fa-save" aria-hidden="true"></i>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="btn-hour-16">
+          <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
       <div id="hour-17" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i id="btn-hour-17" class="fas fa-save" aria-hidden="true"></i>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="btn-hour-17">
+          <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
       <div id="hour-18" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">6PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i id="btn-hour-18"  class="fas fa-save" aria-hidden="true"></i>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save" id="btn-hour-18">
+          <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
 
