updated the Url of the link in readme file

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
    
     <header class="p-5 mb-4 border-5 border-bottom border-dark text-center">
       <h1 class="display-3">Work Day Scheduler</h1>
+      <h2 id="line"></h2>
       <p class="lead">A simple calendar app for scheduling your work day</p>
      
       <div id="time"></div>
